# dash-py-mercado-financeiro

./: .gitignore  README.md  comp_ibov.csv  dados_bacen.py  dados_noticias.py  formato.py  pyproject.toml
assets/: style.css
components/: ativos_ao_vivo.py  economia.py  graficos_ativos.py  noticias.py
data/: comp_ibov.csv  cotacoes.parquet  dados_di.csv  divida_pib.csv  dolar.csv  inflacao.csv  noticias.csv  setores.csv  tickers.csv
logs/: erros_yfinance.txt
src/components/: ativos_ao_vivo.py  economia.py  graficos_ativos.py  noticias.py  setores.py
src/dash_py_mercado_financeiro/: app.py  dados_b3.py  dados_bacen.py  dados_cotacoes_yfinance.py  dados_di.py  dados_mt5_cotacoes.py  dados_noticias.py  formato.py  funcoes_dd.py  rotinas.py
tests/: __init__.py  dados_noticias_web_bj.py
