[project]
name = "dash-py-mercado-financeiro"
version = "0.1.0"
description = ""
authors = [
    {name = "leovnoliveira",email = "consultoria1.ceo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "dash_py_mercado_financeiro", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
